k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luwatch
  namespace: default
  labels:
    app: luwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luwatch
  template:
    metadata:
      labels:
        app: luwatch
    spec:
      containers:
        - name: app
          image: ghcr.io/lubas1337/luwatch:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
      imagePullSecrets:
        - name: ghcr-secret
