k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: luanime
  namespace: default
spec:
  selector:
    app: luanime
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
